ecr-ecs-fargate-app/terraform/security.tf
resource "aws_security_group" "alb" {
    name = "${var.app_name}-alb-sg"
    description = "Security group for ALB"

    ingress {
        from_port = 80
        to_port  = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port  = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

resource "aws_security_group" "ecs" {
    name = "${var.app_name}-ecs-sg"
    vpc_id = aws_vpc.main.id
    description = "Security group for ECS tasks"

    ingress {
        from_port = var.container_port
        to_port  = var.container_port
        protocol = "tcp"
        security_groups = [aws_security_group.alb.id]
    }

    egress {
        from_port = 0
        to_port  = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}
